chore(website): correct issues with scrollbars in playground (#6516)
* fix(website): correct issues with scrollbars in playground

* fix(website): correct sizing of elements

* fix(website): revert some changes

--- a/packages/website/src/components/ErrorsViewer.module.css
+++ b/packages/website/src/components/ErrorsViewer.module.css
@@ -9,7 +9,6 @@
   letter-spacing: 0;
   font-feature-settings: 'liga' 0, 'calt' 0;
   box-sizing: border-box;
-  white-space: break-spaces;
   margin: 0;
 }
 
